--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ description: >- # this means to ignore newlines until "baseurl:"
   This is a blog by Jayavardhan Reddy. Meta Tags: jramasani jay ramasani jayramasani jayavardhan reddy ramasani
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://jramasani.com" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: 
+github_username:  jramasani
 
 # Build settings
 theme: minima
