--- a/_config.yml
+++ b/_config.yml
@@ -18,16 +18,17 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: jayavardhan reddy
+title: a gang of thoughts
 email: ramasani@live.com
 description: >- # this means to ignore newlines until "baseurl:"
-  This is a blog by Jayavardhan Reddy. I write about software, photography, music, movies, and life in general. 
+  I write about software, photography, music, movies, and life in general. ©Jayavardhan Reddy
   
   
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://jramasani.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 
 github_username:  jramasani
+instagram_username: jramasani
 
 # Build settings
 theme: minima
