--- a/_config.yml
+++ b/_config.yml
@@ -38,6 +38,9 @@ plugins:
 permalink: /:collection/:year-:month-:day-:title:output_ext
 show_excerpts: true
 
+# Google Analytics
+google_analytics: UA-218062232-1
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
